# Minimum-Snap

./: README.md
MinimumSnap_Cplex/: MinimumSnap.xlsx  README.md  outpicture.m
MinimumSnap_Cplex/MinimumSnap/: .oplproject  .project  MinimumSnap.mod
MinimumSnap_Cplex/MinimumSnap2/: .oplproject  .project  MinimumSnap2.mod
MinimumSnap_Cplex/MinimumSnap3/: .oplproject  .project  MinimumSnap3.mod
MinimumSnap_MATLAB/: .~lock.三个速度变方向的例子的结果.xlsx#  Untitled.m  figurepos.m  mini_snap_plan.m  plot_point.m  plot_pos_vel_acc.m  plot_traj.m  plot_vel_arrow.m
MinimumSnap_MATLAB/res/: .~lock.res.xlsx#  res.xlsx
MinimumSnap_OSQP/: CMakeLists.txt  MiniSnap.cpp  MiniSnap.hpp  main.cpp
